--- a/src/styles/Container.module.css
+++ b/src/styles/Container.module.css
@@ -1,20 +1,19 @@
 .container {
-	height: 50px;
+	height: 70px;
 	border-radius: 50px;
-	background-color: #e9e9e9;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	vertical-align: middle;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 	transition: 0.2s;
 	cursor: default;
 }
 
 .container .icon {
-	width: 30px;
-	height: 30px;
-	border-radius: 30px;
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
 	margin-left: 10px;
 	object-fit: cover;
 }
@@ -22,7 +21,7 @@
 .container .title {
 	font-size: 20px;
 	font-weight: 500;
-	margin-left: 5px;
+	margin-left: 10px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -46,7 +45,7 @@
 @media (min-width: 1000px) {
 	.container {
 		cursor: pointer;
-		transition: .2s ease-in-out all;
+		transition: 0.2s ease-in-out all;
 	}
 	.container:hover {
 		transform: scale(1.1);
