--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,8 +1,56 @@
 .main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.main .container {
+	width: 400px;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	padding: 6rem;
-	min-height: 100vh;
+	margin: 20px auto;
+}
+
+.main .container .photo {
+	width: 160px;
+	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+}
+
+.main .container .photo img {
+	width: 100%;
+	height: auto;
+	border-radius: 50%;
+}
+
+.main .container .description {
+	font-size: 20px;
+	font-weight: 500;
+	margin-bottom: 40px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: justify;
+}
+
+.main .container .name {
+	font-size: 36px;
+	font-weight: 500;
+	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+@media (max-width: 420px) {
+	.main .container {
+		width: 90%;
+	}
+	.main .description {
+		padding: 0 20px;
+	}
 }
